3B - update home new design - MOBILE

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -192,6 +192,8 @@
 				</div>
 				<!-- /END HOTSALE TODAY -->
 
+				<div class="banner-ads"><img src="../../assets/images/new-design/ads-1.jpg"></div>
+
 				<div class="featured">
 					<ul>
 						<li>
@@ -425,6 +427,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -432,11 +435,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price">1.125.000đ</span>
+								<span class="p-price wrap-line w-break">1.125.000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -451,6 +453,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -458,11 +461,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price">189,000đ - 195,000đ</span>
+								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -477,6 +479,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -484,11 +487,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
-								<span class="p-price">1,989,000đ - 2,195,000đ</span>
+								<span class="p-price wrap-line w-break">1,989,000đ - 2,195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -503,6 +505,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -510,11 +513,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
-								<span class="p-price">189,000đ - 195,000đ</span>
+								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -538,6 +540,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -545,11 +548,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price">1.125.000đ</span>
+								<span class="p-price wrap-line w-break">1.125.000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -564,6 +566,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -571,11 +574,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price">189,000đ - 195,000đ</span>
+								<span class="p-price wrap-line w-break">189,000đ - 195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -590,6 +592,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -597,11 +600,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Ngắn vch</h4></a>
-								<span class="p-price">1,989,000đ - 2,195,000đ</span>
+								<span class="p-price wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -616,6 +618,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img30.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -623,11 +626,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Dài vừa vừa những cũng 2 dòng</h4></a>
-								<span class="p-price">189,000đ - 195,000đ</span>
+								<span class="p-price wrap-line w-break">1,089,000đ - 2,195,000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -642,6 +644,7 @@
 					<div class="box-p-wrap">
 						<div class="box-p-img">
 							<a href="#"><img src="../../assets/images/img29.jpg"></a>
+							<span class="rating-label">-50%</span>
 						</div>
 						<div class="box-p-meta">
 							<div class="store-info">
@@ -649,11 +652,10 @@
 									<img src="../../assets/images/img30.jpg">
 									<h5 class="wrap-line">Clever Hippo cùng cái tên siêu dài</h5>
 								</div>
-								<span class="rating-label">-50%</span>
 							</div>
 							<div class="p-name">
 								<a href="#"><h4 class="wrap-line twoline">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h4></a>
-								<span class="p-price">1.125.000đ</span>
+								<span class="p-price wrap-line w-break">101.125.000đ</span>
 							</div>
 							<div class="p-rating">
 								<img src="../../assets/images/new-design/icons/star.png">
@@ -668,36 +670,60 @@
 		</div>
 		<!-- /END RECOMMEND PRODUCTS -->
 
+		<!-- BEGIN BRANDS -->
+		<div class="brands container">
+			<div class="title">
+				<h3>Hàng thương hiệu</h3>
+				<a href="#">Xem tất cả</a>
+			</div>
+			<div class="scroll-x">
+				<ul>
+					<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
+				</ul>
+				<ul>
+					<li><a href="#"><img src="../../assets/images/brands/canon.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/samsung.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/adidas.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/nike.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/puma.png"></a></li>
+					<li><a href="#"><img src="../../assets/images/brands/loreal.png"></a></li>
+				</ul>
+			</div>
+		</div>
+		<!-- /END BRANDS -->
+
 		<!-- BEGIN FOOTER -->
 		<footer>
 			<div class="main-footer container">
 				<div class="row">
 					<div class="col-xs-12">
 						<h3>APP DOWNLOAD</h3>
-						<p>3B App is now available on Google Play & App Store. Get it now.</p>
 						<ul class="app-download">
-							<li><img src="../../assets/images/android.png"></li>
-							<li><img src="../../assets/images/ios-app.png"></li>
+							<li><a href="#"><img src="../../assets/images/new-design/mobile/google-play.png"></a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/mobile/app-store.png"></a></li>
 						</ul>
 					</div>
 					<div class="clearfix"></div>
 
 					<div class="col-xs-6">
 						<ul class="footer-link">
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> About Us</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Delivery Information</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> New Products</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Best Sales</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Order History</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Liên hệ</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Chứng nhận chất lượng</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Cách mua hàng</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Chính sách mua hàng</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-6">
 						<ul class="footer-link">
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> About Us</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Delivery Information</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> New Products</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Best Sales</a></li>
-							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Order History</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Liên hệ</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Chứng nhận chất lượng</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Cách mua hàng</a></li>
+							<li><a href="#"><img src="../../assets/images/new-design/icons/play-arrow.png"> Chính sách mua hàng</a></li>
 						</ul>
 					</div>
 				</div>
