3B - update seller-profile

--- a/3B-NEW/seller-profile.html
+++ b/3B-NEW/seller-profile.html
@@ -392,6 +392,16 @@
 															</li>
 															<li>
 																<div class="stack-block">
+																	<i class="fa fa-phone"></i> Số điện thoại: <span class="pull-right badge">0392939939</span>
+																</div>
+															</li>
+															<li>
+																<div class="stack-block">
+																	<i class="fa fa-envelope"></i> Email: <span class="pull-right badge">mailtendaidaisssdsd@gmail.com</span>
+																</div>
+															</li>
+															<li>
+																<div class="stack-block">
 																	<i class="fa fa-shopping-bag"></i> Số sản phẩm <span class="pull-right badge bg-green">3100</span>
 																</div>
 															</li>
