3B - update admin-seller-profile + seller-profile

--- a/3B-NEW/admin-seller-profile.html
+++ b/3B-NEW/admin-seller-profile.html
@@ -409,22 +409,17 @@
 												</li>
 												<li>
 													<div class="stack-block">
-														Số điện thoại: 0123456789 <span class="pull-right">Email: abc123@mail.com</span>
+														<i class="fa fa-phone"></i> Số điện thoại: <span class="pull-right badge">0392939939</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
+														<i class="fa fa-envelope"></i> Email: <span class="pull-right badge">mailtendaidaisssdsd@gmail.com</span>
 													</div>
 												</li>
 												<li>
 													<div class="stack-block">
 														Mô tả: shop chuyên cung cấp sỉ lẻ các mặt hàng
-													</div>
-												</li>
-												<li>
-													<div class="stack-block">
-														<i class="fa fa-commenting-o"></i> Tỉ lệ phản hồi <span class="pull-right badge bg-green">31%</span>
-													</div>
-												</li>
-												<li>
-													<div class="stack-block">
-														<i class="fa fa-clock-o"></i> Thời gian phản hồi <span class="pull-right badge bg-green">khoảng vài giờ</span>
 													</div>
 												</li>
 												<li>
@@ -439,7 +434,7 @@
 												</li>
 												<li>
 													<div class="stack-block">
-														<i class="fa fa-cubes"></i> Tỉ lệ thành công đơn hàng <span class="pull-right badge bg-green">4.00%</span>
+														<i class="fa fa-cubes"></i> Tỉ lệ đơn hàng không thành công <span class="pull-right badge bg-green">4.00%</span>
 													</div>
 												</li>
 											</ul>
