3B - update seller-product-list

--- a/3B-NEW/seller-product-list.html
+++ b/3B-NEW/seller-product-list.html
@@ -418,7 +418,7 @@
 							<!-- BEGIN PAGINATION -->
 							<div class="pagi pull-right">
 								<div class="row">
-									<div class="col-md-10">
+									<div class="col-md-10 col-sm-7 col-xs-12 margin-b">
 										<ul class="pagination no-margin pull-right">
 											<li><a href="#">«</a></li>
 											<li><a href="#">1</a></li>
@@ -426,8 +426,9 @@
 											<li><a href="#">3</a></li>
 											<li><a href="#">»</a></li>
 										</ul>
+										<div class="clearfix"></div>
 									</div>
-									<div class="col-md-2">
+									<div class="col-md-2 col-sm-5 col-xs-12">
 										<div class="input-group small">
 											<span class="input-group-btn">
 												<button type="button" class="btn btn-green btn-flat">Đi tới trang</button>
@@ -437,6 +438,7 @@
 									</div>
 								</div>
 							</div>
+							<div class="clearfix"></div>
 							<!-- /END PAGINATION -->
 						</div>
 						<!-- /END BOX BODY -->
