3B - small update admin-seller-profile + store-home

--- a/3B-NEW/admin-seller-profile.html
+++ b/3B-NEW/admin-seller-profile.html
@@ -434,6 +434,11 @@
 												</li>
 												<li>
 													<div class="stack-block">
+														<img src="assets/images/svg/chat-2.svg" width="18px;"></i> Chat <span class="pull-right badge bg-green">100%</span>
+													</div>
+												</li>
+												<li>
+													<div class="stack-block">
 														<i class="fa fa-cubes"></i> Tỉ lệ đơn hàng không thành công <span class="pull-right badge bg-green">4.00%</span>
 													</div>
 												</li>
