--- a/3B-WEB/store-home.html
+++ b/3B-WEB/store-home.html
@@ -327,6 +327,14 @@
 							</li>
 							<li>
 								<div class="attr pull-left">
+									<img src="assets/images/svg/chat.svg">
+									<span>Chat</span>
+								</div>
+								<div class="attr-num pull-right">100%</div>
+								<div class="clearfix"></div>
+							</li>
+							<li>
+								<div class="attr pull-left">
 									<img src="assets/images/svg/followers.svg">
 									<span>Follower</span>
 								</div>
