3B - update admin-statistic-list-product

--- a/3B-NEW/admin-statistic-list-product.html
+++ b/3B-NEW/admin-statistic-list-product.html
@@ -432,7 +432,7 @@
 												<img class="pull-left p-image" src="assets/images/img3.jpg">
 												<div class="p-info">
 													<div class="label label-default">Kết thúc</div>
-													<div class="p-name custom-wrap-line">Lorem isum dolor set amit deportible alquada mit</div>
+													<div class="p-name custom-wrap-line"><a href="admin-advertising-view-setting.html">Lorem isum dolor set amit deportible alquada mit</a></div>
 													<div class="p-time">04/11 đến 04/12</div>
 												</div>
 											</td>
@@ -452,7 +452,7 @@
 												<img class="pull-left p-image" src="assets/images/img28.png">
 												<div class="pull-left">
 													<div class="label label-warning">Tạm dừng</div>
-													<div class="p-name custom-wrap-line">Combo cái gì đó mà không ai biết</div>
+													<div class="p-name custom-wrap-line"><a href="admin-advertising-view-setting.html">Combo cái gì đó mà không ai biết</a></div>
 													<div class="p-time">Không giới hạn thời gian</div>
 												</div>
 											</td>
@@ -473,7 +473,7 @@
 												<img class="pull-left p-image" src="assets/images/img28.png">
 												<div class="pull-left">
 													<div class="label label-success">Đang chạy</div>
-													<div class="p-name custom-wrap-line">Combo cái gì đó mà không ai biết</div>
+													<div class="p-name custom-wrap-line"><a href="admin-advertising-view-setting.html">Combo cái gì đó mà không ai biết</a></div>
 													<div class="p-time">Không giới hạn thời gian</div>
 												</div>
 											</td>
