3B - NEW_DESIGN - SEARCH_STORE_MOBILE - update html

--- a/3B-WEB/NEW_DESIGN/mobile/search-store.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-store.html
@@ -239,6 +239,18 @@
 		</div>
 		<!-- /END SEARCH RESULT -->
 
+		<div class="container">
+			<!-- BEGIN PAGINATION -->
+			<ul class="pagi">
+				<li><a href="#"><i class="fa fa-angle-left"></i></a></li>
+				<li><a href="#"><span>1</span></a></li>
+				<li><a href="#"><span>2</span></a></li>
+				<li><a href="#"><span>3</span></a></li>
+				<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
+			</ul>
+			<!-- /END PAGINATION -->
+		</div>
+
 		<!-- BEGIN FOOTER -->
 		<footer>
 			<div class="main-footer container">
