3B - NEW_DESIGN - SEARCH_PRODUCT_MOBILE - add search-product page on mobile

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -106,6 +106,7 @@
 					<ul>
 						<li><a href="NEW_DESIGN/mobile/home.html">Home</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-store.html">Search Store</a></li>
+						<li><a href="NEW_DESIGN/mobile/search-product.html">Search Product</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
