3B - NEW_DESIGN - SEARCH_PRODUCT_BY_CATEGORY_MOBILE - add search-product-by-category page

--- a/3B-WEB/NEW_DESIGN/mobile/search-product-by-category.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-product-by-category.html
@@ -70,7 +70,7 @@
 		<div class="breadcrumb">
 			<ul>
 				<li><a href="home.html">Trang chủ</a></li>
-				<li>Tìm kiếm sản phẩm</li>
+				<li>Tìm kiếm sản phẩm theo danh mục</li>
 			</ul>
 		</div>
 		<!-- /END BREADCRUMB -->
@@ -227,78 +227,15 @@
 					</ul>
 				</div>
 				<div class="actions boxes">
-					<button class="btn btn-normal">Thiết lập lại</button>
 					<button class="btn btn-normal">Áp dụng</button>
 				</div>
 			</div>
 			<!-- /END LAST SEcTION SEARcH CONTROL -->
 
-			<!-- BEGIN LIST SEARCH BY CATEGORY -->
-			<div class="search-by-cat">
-				<div class="title"><h3>Tìm kiếm theo danh mục</h3></div>
-				<div class="boxes wrap">
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img30.jpg">
-							<h3 class="wrap-line">Áo sơ mi</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img29.jpg">
-							<h3 class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img30.jpg">
-							<h3 class="wrap-line">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img30.jpg">
-							<h3 class="wrap-line">Quần áo công sở</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img29.jpg">
-							<h3 class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img30.jpg">
-							<h3 class="wrap-line">Cây dương xỉ để bàn mini cùng cái tên dài vãi chưởng</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img24.png">
-							<h3 class="wrap-line">Quần áo công sở</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img29.jpg">
-							<h3 class="wrap-line">♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬ Tên shop cùng ký tự ♩ ♪ ♫ ♬  ♩ ♪ ♫ ♬</h3>
-						</a>
-					</div>
-					<div class="item">
-						<a href="search-product-by-category.html">
-							<img src="../../assets/images/img24.png">
-							<h3 class="wrap-line">Đầm công chúa</h3>
-						</a>
-					</div>
-				</div>
-			</div>
-			<!-- /END LIST SEARCH BY CATEGORY -->
-
 			<div class="results">
 				<!-- BEGIN CONTROL RESULT -->
 				<div class="boxes wrap margin-b20">
-					<div class="title"><h3>Kết quả tìm kiếm (107,125)</h3></div>
+					<div class="title"><h3>Kết quả tìm kiếm (1200)</h3></div>
 					<div class="filter-bl boxes wrap">
 						<div class="filter small">
 							<label>Sort by:</label>
@@ -318,8 +255,6 @@
 								<option value="2">Price &#8595;</option>
 							</select>
 						</div>
-
-						<button class="btn btn-border-g">Copy Link</button>
 					</div>
 				</div>
 				<!-- /END CONTROL RESULT -->
