--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -107,6 +107,7 @@
 						<li><a href="NEW_DESIGN/mobile/home.html">Home</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-store.html">Search Store</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-product.html">Search Product</a></li>
+						<li><a href="NEW_DESIGN/mobile/search-product-by-category.html">Search Product By Category</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
