3B - NEW_DESIGN - SEARCH_NOT_FOUND_MOBILE - add search-not-found page

--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -108,6 +108,7 @@
 						<li><a href="NEW_DESIGN/mobile/search-store.html">Search Store</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-product.html">Search Product</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-product-by-category.html">Search Product By Category</a></li>
+						<li><a href="NEW_DESIGN/mobile/search-not-found.html">Search Not Found</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
