--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -63,6 +63,39 @@
 				</div>
 			</div>
 
+			<!-- BEGIN ADVANCE SEARCH -->
+			<div class="advance-search">
+				<!-- BEGIN SEARCH BY -->
+				<div class="search-by">
+					<h4>Tìm kiếm theo</h4>
+					<div class="boxes">
+						<div class="by-store">
+							<i class="icon ico-store"></i>
+							<span>Cửa hàng</span>
+						</div>
+						<div class="by-product active">
+							<i class="icon ico-product"></i>
+							<span>Sản phẩm</span>
+						</div>
+					</div>
+					<button class="close"><i class="fa fa-close"></i></button>
+				</div>
+				<!-- /END SEARCH BY -->
+
+				<!-- BEGIN SEARCH HISTORY -->
+				<div class="search-history">
+					<h4>Lịch sử tìm kiếm</h4>
+					<ul class="search-list">
+						<li><a href="#">bear cabinet for kids</a></li>
+						<li><a href="#">bear cabinet</a></li>
+						<li><a href="#">bear</a></li>
+						<li><a href="#">cabinet</a></li>
+					</ul>
+				</div>
+				<!-- /END SEARCH HISTORY -->
+			</div>
+			<!-- /END ADVANCE SEARCH -->
+
 			<div class="banner">
 				<img src="../../assets/images/new-design/banner.jpg">
 			</div>
@@ -764,5 +797,6 @@
 
 	<script src="../../assets/js/jquery.min.js"></script>
 	<script src="../../assets/js/bootstrap.min.js"></script>
+	<script src="../../assets/js/script_mobile.js"></script>
 </body>
 </html>
