3B - remove style icons header on pc

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -386,49 +386,57 @@
 								<ul>
 									<li>
 										<a href="#">
-											<div class="icon gio-vang"><img src="../../assets/images/new-design/icons-svg/gio-vang.svg"></div>
+											<img src="../../assets/images/new-design/icons/gio-vang.png">
+											<!-- <div class="icon gio-vang"><img src="../../assets/images/new-design/icons-svg/gio-vang.svg"></div> -->
 											<span>Giờ vàng</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div>
+											<img src="../../assets/images/new-design/icons/sale-le-size.png">
+											<!-- <div class="icon sale-le-size"><img src="../../assets/images/new-design/icons-svg/sale-le-size.svg"></div> -->
 											<span>Sale lẻ size</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon thuong-hieu"><img src="../../assets/images/new-design/icons-svg/thuong-hieu.svg"></div>
+											<img src="../../assets/images/new-design/icons/thuong-hieu.png">
+											<!-- <div class="icon thuong-hieu"><img src="../../assets/images/new-design/icons-svg/thuong-hieu.svg"></div> -->
 											<span>Thương hiệu</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon from-1k"><img src="../../assets/images/new-design/icons-svg/from-1k.svg"></div>
+											<img src="../../assets/images/new-design/icons/from-1k.png">
+											<!-- <div class="icon from-1k"><img src="../../assets/images/new-design/icons-svg/from-1k.svg"></div> -->
 											<span>From 1k</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon cua-hang-tot"><img src="../../assets/images/new-design/icons-svg/cua-hang-tot.svg"></div>
+											<img src="../../assets/images/new-design/icons/cua-hang-tot.png">
+											<!-- <div class="icon cua-hang-tot"><img src="../../assets/images/new-design/icons-svg/cua-hang-tot.svg"></div> -->
 											<span>Cửa hàng tốt</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon thuc-pham"><img src="../../assets/images/new-design/icons-svg/thuc-pham.svg"></div>
+											<img src="../../assets/images/new-design/icons/thuc-pham.png">
+											<!-- <div class="icon thuc-pham"><img src="../../assets/images/new-design/icons-svg/thuc-pham.svg"></div> -->
 											<span>Thực phẩm</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon trai-cay"><img src="../../assets/images/new-design/icons-svg/trai-cay.svg"></div>
+											<img src="../../assets/images/new-design/icons/trai-cay.png">
+											<!-- <div class="icon trai-cay"><img src="../../assets/images/new-design/icons-svg/trai-cay.svg"></div> -->
 											<span>Trái cây</span>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<div class="icon phu-kien-oto"><img src="../../assets/images/new-design/icons-svg/phu-kien-oto.svg"></div>
+											<img src="../../assets/images/new-design/icons/phu-kien-oto.png">
+											<!-- <div class="icon phu-kien-oto"><img src="../../assets/images/new-design/icons-svg/phu-kien-oto.svg"></div> -->
 											<span>Phụ kiện ô tô</span>
 										</a>
 									</li>
