3B - NEW_DESIGN - MOBILE - update svg icons

--- a/3B-WEB/NEW_DESIGN/mobile/search-product.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-product.html
@@ -29,7 +29,7 @@
 				<div class="row">
 					<div class="col-xs-2">
 						<!-- BEGIN LOGO -->
-						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons/logo-3b.png"></a></h1>
+						<h1 class="logo txt-center"><a href="index.html"><img src="../../assets/images/new-design/icons-svg/logo-3b.svg"></a></h1>
 						<!-- /END LOGO -->
 					</div>
 					<div class="col-xs-7">
@@ -40,7 +40,7 @@
 									<input type="text" class="form-control" placeholder="Search Product, Brand...">
 								</div>
 								<span class="input-group-btn">
-									<button type="button" class="btn"><img src="../../assets/images/new-design/icons/search.png"></button>
+									<button type="button" class="btn"><img src="../../assets/images/new-design/icons-svg/search.svg"></button>
 								</span>
 							</div>
 						</div>
@@ -50,11 +50,11 @@
 						<!-- BEGIN CART -->
 						<div class="cart txt-center">
 							<a href="view-all-categories.html" class="nav-mobile">
-								<img src="../../assets/images/new-design/icons/nav-mobile.png">
+								<img src="../../assets/images/new-design/icons-svg/nav-mobile.svg">
 								<span>Danh Mục</span>
 							</a>
 							<a href="#">
-								<img src="../../assets/images/new-design/icons/cart.png">
+								<img src="../../assets/images/new-design/icons-svg/cart.svg">
 								<span>Giỏ hàng</span>
 								<span class="total">99</span>
 							</a>
@@ -541,25 +541,25 @@
 			<ul>
 				<li>
 					<a href="../../index.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/mobile/icon-home-active.png"></span>
+						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/home.svg"></span>
 						<span>Trang Chủ</span>
 					</a>
 				</li>
 				<li>
 					<a href="../../index.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/mobile/icon-cat.png"></span>
+						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/shop.svg"></span>
 						<span>Danh mục</span>
 					</a>
 				</li>
 				<li>
 					<a href="../../index.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/mobile/icon-chat.png"><span>99</span></span>
+						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/chat.svg"><span>99</span></span>
 						<span>Chat</span>
 					</a>
 				</li>
 				<li>
 					<a href="../../index.html">
-						<span class="frame-icon"><img src="../../assets/images/new-design/mobile/icon-user.png"></span>
+						<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg/user.svg"></span>
 						<span>Tài khoản</span>
 					</a>
 				</li>
