3B - NEW_DESIGN - HOME_PC - test icons svg category

--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -243,7 +243,7 @@
 						</li>
 						<li>
 							<a href="view-product-by-category.html" class="custom-wrap-1line">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-1.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-1.svg"></span>
 								Nội Thất
 							</a>
 							<div class="sub-menu">
@@ -321,55 +321,55 @@
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-2.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-2.svg"></span>
 								Thời trang nữ
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-3.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-3.svg"></span>
 								Thời trang nam
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-4.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-4.svg"></span>
 								Đồ lót
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-5.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-5.svg"></span>
 								Mẹ và bé
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-6.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-6.svg"></span>
 								Mỹ phẩm
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-7.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-7.svg"></span>
 								Máy tính và laptop
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-8.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-8.svg"></span>
 								Phụ kiện ôtô
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-9.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-9.svg"></span>
 								Thực phẩm
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="frame-icon"><img src="../../assets/images/new-design/icons/cat-icon-10.png"></span>
+								<span class="frame-icon"><img src="../../assets/images/new-design/icons-svg-cat/cat-icon-10.svg"></span>
 								Trái cây
 							</a>
 						</li>
