3B - update admin-statistic-report

--- a/3B-NEW/admin-statistic-report.html
+++ b/3B-NEW/admin-statistic-report.html
@@ -411,7 +411,7 @@
 								</ul>
 								<div class="tab-content">
 									<!-- BEGIN TAB 1 -->
-									<div class="tab-pane active" id="tab_1">
+									<div class="tab-pane active adv-hist" id="tab_1">
 										<div class="row">
 											<div class="col-md-12">
 												<ul class="adv-hist-control">
@@ -473,14 +473,14 @@
 											</div>
 											<div class="col-md-6">
 												<h4><small>Số sản phẩm đang chạy quảng cáo:</small> <span class="text-black">190.000</span></h4>
-												<h4><small>Doanh thu:</small> <span class="text-red">30.000.000</span></h4>
+												<h4><small>Doanh thu sản phẩm quảng cáo:</small> <span class="text-red">30.000.000</span></h4>
 												<a href="admin-statistic-list-product.html" class="btn btn-success btn-xs">Xem danh sách sản phẩm</a>
 												<a href="admin-statistic-list-keyword.html" class="btn btn-success btn-xs">Xem danh sách từ khóa</a>
 											</div>
 
 											<div class="col-md-6">
 												<h4><small>Số shop đang chạy quảng cáo:</small> <span class="text-black">1090</span></h4>
-												<h4><small>Doanh thu:</small> <span class="text-red">15.000.000</span></h4>
+												<h4><small>Doanh thu shop quảng cáo:</small> <span class="text-red">15.000.000</span></h4>
 												<a href="admin-statistic-list-shop.html" class="btn btn-success btn-xs">Xem danh sách shop</a>
 											</div>
 
