3B - NEW_DESIGN - HOME_MOBILE - add search result list store and product

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -73,7 +73,7 @@
 							<i class="icon ico-store"></i>
 							<span>Cửa hàng</span>
 						</div>
-						<div class="by-product active">
+						<div class="by-product">
 							<i class="icon ico-product"></i>
 							<span>Sản phẩm</span>
 						</div>
@@ -84,7 +84,7 @@
 
 				<!-- BEGIN SEARCH HISTORY -->
 				<div class="search-history">
-					<h4>Lịch sử tìm kiếm</h4>
+					<h4>Lịch sử tìm kiếm <button class="btn btn-normal">Xóa</button></h4>
 					<ul class="search-list">
 						<li><a href="#">bear cabinet for kids</a></li>
 						<li><a href="#">bear cabinet</a></li>
@@ -93,6 +93,33 @@
 					</ul>
 				</div>
 				<!-- /END SEARCH HISTORY -->
+
+				<!-- BEGIN SEARCH STORE RESULT -->
+				<div class="search-store results">
+					<h4>Kết quả tìm kiếm</h4>
+					<ul class="search-list">
+						<li><a href="#"><span><img src="../../assets/images/img30.jpg"></span> bear cabinet for kids</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img29.jpg"></span> bear cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img30.jpg"></span> bear</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img29.jpg"></span> cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img11.png"></span> cabinet</a></li>
+					</ul>
+					<a href="#" class="btn btn-loadmore">Xem tất cả</a>
+				</div>
+				<!-- /END SEARCH STORE RESULT -->
+
+				<!-- BEGIN SEARCH PRODUCT RESULT -->
+				<div class="search-product results">
+					<h4>Kết quả tìm kiếm</h4>
+					<ul class="search-list">
+						<li><a href="#">bear cabinet for kids</a></li>
+						<li><a href="#">bear cabinet</a></li>
+						<li><a href="#">bear</a></li>
+						<li><a href="#">cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img11.png"></span> Shop Hydra</a></li>
+					</ul>
+				</div>
+				<!-- /END SEARCH PRODUCT RESULT -->
 			</div>
 			<!-- /END ADVANCE SEARCH -->
 
