--- a/3B-WEB/NEW_DESIGN/mobile/search-not-found.html
+++ b/3B-WEB/NEW_DESIGN/mobile/search-not-found.html
@@ -64,37 +64,64 @@
 				</div>
 
 				<!-- BEGIN ADVANCE SEARCH -->
-				<div class="advance-search">
-					<!-- BEGIN SEARCH BY -->
-					<div class="search-by">
-						<h4>Tìm kiếm theo</h4>
-						<div class="boxes">
-							<div class="by-store">
-								<i class="icon ico-store"></i>
-								<span>Cửa hàng</span>
-							</div>
-							<div class="by-product active">
-								<i class="icon ico-product"></i>
-								<span>Sản phẩm</span>
-							</div>
+			<div class="advance-search">
+				<!-- BEGIN SEARCH BY -->
+				<div class="search-by">
+					<h4>Tìm kiếm theo</h4>
+					<div class="boxes">
+						<div class="by-store">
+							<i class="icon ico-store"></i>
+							<span>Cửa hàng</span>
 						</div>
-						<button class="close"><i class="fa fa-close"></i></button>
+						<div class="by-product">
+							<i class="icon ico-product"></i>
+							<span>Sản phẩm</span>
+						</div>
 					</div>
-					<!-- /END SEARCH BY -->
-
-					<!-- BEGIN SEARCH HISTORY -->
-					<div class="search-history">
-						<h4>Lịch sử tìm kiếm</h4>
-						<ul class="search-list">
-							<li><a href="#">bear cabinet for kids</a></li>
-							<li><a href="#">bear cabinet</a></li>
-							<li><a href="#">bear</a></li>
-							<li><a href="#">cabinet</a></li>
-						</ul>
-					</div>
-					<!-- /END SEARCH HISTORY -->
+					<button class="close"><i class="fa fa-close"></i></button>
 				</div>
-				<!-- /END ADVANCE SEARCH -->
+				<!-- /END SEARCH BY -->
+
+				<!-- BEGIN SEARCH HISTORY -->
+				<div class="search-history">
+					<h4>Lịch sử tìm kiếm <button class="btn btn-normal">Xóa</button></h4>
+					<ul class="search-list">
+						<li><a href="#">bear cabinet for kids</a></li>
+						<li><a href="#">bear cabinet</a></li>
+						<li><a href="#">bear</a></li>
+						<li><a href="#">cabinet</a></li>
+					</ul>
+				</div>
+				<!-- /END SEARCH HISTORY -->
+
+				<!-- BEGIN SEARCH STORE RESULT -->
+				<div class="search-store results">
+					<h4>Kết quả tìm kiếm</h4>
+					<ul class="search-list">
+						<li><a href="#"><span><img src="../../assets/images/img30.jpg"></span> bear cabinet for kids</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img29.jpg"></span> bear cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img30.jpg"></span> bear</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img29.jpg"></span> cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img11.png"></span> cabinet</a></li>
+					</ul>
+					<a href="#" class="btn btn-loadmore">Xem tất cả</a>
+				</div>
+				<!-- /END SEARCH STORE RESULT -->
+
+				<!-- BEGIN SEARCH PRODUCT RESULT -->
+				<div class="search-product results">
+					<h4>Kết quả tìm kiếm</h4>
+					<ul class="search-list">
+						<li><a href="#">bear cabinet for kids</a></li>
+						<li><a href="#">bear cabinet</a></li>
+						<li><a href="#">bear</a></li>
+						<li><a href="#">cabinet</a></li>
+						<li><a href="#"><span><img src="../../assets/images/img11.png"></span> Shop Hydra</a></li>
+					</ul>
+				</div>
+				<!-- /END SEARCH PRODUCT RESULT -->
+			</div>
+			<!-- /END ADVANCE SEARCH -->
 			</div><!-- /end header-top -->
 		</header>
 		<!-- /END HEADER -->
