3B - NEW_DESIGN - MOBILE - add pages product-hot-today, product-recommend

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -479,7 +479,7 @@
 		<div class="hot-today container">
 			<div class="title">
 				<h3><img src="../../assets/images/new-design/icons/sun.png"> Hàng hot hôm nay</h3>
-				<a href="#">Xem tất cả</a>
+				<a href="product-hot-today.html">Xem tất cả</a>
 			</div>
 
 			<div class="boxes wrap scroll-x">
@@ -726,7 +726,7 @@
 					</div>
 				</div><!-- /end product -->
 			</div><!-- /end boxes -->
-			<div class="loadmore txt-center"><button class="btn btn-loadmore">Xem thêm</button></div>
+			<div class="loadmore txt-center"><a href="product-recommend.html" class="btn btn-loadmore">Xem thêm</a></div>
 		</div>
 		<!-- /END RECOMMEND PRODUCTS -->
 
